--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "react-router-dom": "^7.7.1",
     "react-router-hash-link": "^2.4.3",
     "react-scroll": "^1.9.3",
+    "react-type-animation": "^3.2.0",
     "three": "^0.180.0"
   },
   "devDependencies": {
